Fix div structure to properly align flex at lineup

--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
 body {
-    height: 100vh;
-    margin: 48px;
+    margin: 0;
+    min-height: 100vh;
     font-family: Roboto, Arial, Helvetica, sans-serif;
-
 }
 
 .body {
     display: flex;
     flex-direction: column;
+    flex: 1;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #1f2937;
+    padding: 12px;
 }
 
 .header-links{
@@ -26,6 +28,11 @@ body {
     display: flex;
 }
 
+.logotext {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+}
 .prompt {
     display: flex;
     flex-direction: column;
@@ -38,6 +45,14 @@ body {
 .lineup {
     display: flex;
     justify-content: space-around;
+    
+}
+
+.info {
+    display: flex;
+    max-width: 150px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 ul {
